--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ dependencies {
 
 javafx {
     version = "14"
-    modules = [ 'javafx.controls', 'javafx.fxml' ]
+    modules = ['javafx.controls', 'javafx.fxml', 'javafx.swing']
 }
 
 mainClassName = 'dev.pa1007.MainApp'
