--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile "commons-io:commons-io:2.6"
+    compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.6'
 }
 
 
