--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'application'
-    id 'org.openjfx.javafxplugin' version '0.0.8'
+    id 'org.openjfx.javafxplugin' version '0.0.9'
 }
 
 group 'dev.pa1007'
@@ -22,4 +22,12 @@ javafx {
     modules = ['javafx.controls', 'javafx.fxml', 'javafx.swing']
 }
 
-mainClassName = 'dev.pa1007.MainApp'
+mainClassName = 'dev.pa1007.MainWithoutGUI'
+jar {
+    manifest {
+        attributes 'Main-Class': 'dev.pa1007.MainWithoutGUI'
+    }
+    from {
+        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+    }
+}
